[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexprice-sdk-test"
version = "2.0.2"
description = "Python SDK for FlexPrice API"
readme = "README.md"
requires-python = ">=3.9.2"
authors = [{ name = "Speakeasy" }]
dependencies = [
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
]

[project.urls]
Repository = "https://github.com/flexprice/flexprice"
Homepage = "https://github.com/flexprice/flexprice"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
